# LOTUSim-generic-scenario

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  pyproject.toml
lotusim_unity_executables/lotusim_scenario_linux/lotusim_scenario_BurstDebugInformation_DoNotShip/Data/Plugins/: lib_burst_generated.txt
lotusim_unity_executables/lotusim_scenario_linux/lotusim_scenario_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  boot.config  globalgamemanagers  level0  level1  resources.assets  sharedassets0.assets
lotusim_unity_executables/lotusim_scenario_linux/lotusim_scenario_Data/StreamingAssets/aa/: catalog.json  settings.json
lotusim_unity_executables/lotusim_scenario_linux/lotusim_scenario_Data/StreamingAssets/aa/AddressablesLink/: link.xml
lotusim_unity_executables/lotusim_scenario_windows/lotusim_scenario_BurstDebugInformation_DoNotShip/Data/Plugins/x86_64/: lib_burst_generated.txt
lotusim_unity_executables/lotusim_scenario_windows/lotusim_scenario_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  level0  level1  resources.assets  resources.assets.resS  sharedassets0.assets  sharedassets0.assets.resS  sharedassets1.resource
lotusim_unity_executables/lotusim_scenario_windows/lotusim_scenario_Data/StreamingAssets/aa/: catalog.json  settings.json
src/agents/bluerov2_heavy/: package.xml  setup.cfg  setup.py
src/agents/bluerov2_heavy/bluerov2_heavy/: __init__.py  bluerov2_heavy.py
src/agents/commando/: package.xml  setup.cfg  setup.py
src/agents/commando/commando/: __init__.py  commando.py
src/agents/dtmb_hull/: package.xml  setup.cfg  setup.py
src/agents/dtmb_hull/dtmb_hull/: __init__.py  dtmb_hull.py
src/agents/fremm/: package.xml  setup.cfg  setup.py
src/agents/fremm/fremm/: __init__.py  fremm.py
src/agents/lrauv/: package.xml  setup.cfg  setup.py
src/agents/lrauv/lrauv/: __init__.py  lrauv.py  lrauv_propeller.py
src/agents/mine/: package.xml  setup.cfg  setup.py
src/agents/mine/mine/: __init__.py  mine.py
src/agents/pha/: package.xml  setup.cfg  setup.py
src/agents/pha/pha/: __init__.py  pha.py
src/agents/wamv/: package.xml  setup.cfg  setup.py
src/agents/wamv/wamv/: __init__.py  wamv.py
src/agents/x500/: package.xml  setup.cfg  setup.py
src/agents/x500/x500/: __init__.py  x500.py
src/gz_ros2_bridge/: CMakeLists.txt  package.xml
src/gz_ros2_bridge/launch/: bridge_nodes.launch.py
src/gz_ros2_bridge/src/: stats_gz_to_ros_bridge.cpp  wind_ros_to_gz_bridge.cpp
src/simulation_run/: package.xml  setup.cfg  setup.py
src/simulation_run/config/: defenseScenario.json
src/simulation_run/executable/: scenario_launch.sh
src/simulation_run/simulation_run/: agent.py  agents_manager.py  main.py  ros_manager.py  simulation_runner.py  utils.py
