[project]
name = "lotusim-generic-scenario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "add-license-header>=2.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "black>=24.0",
    "pylint>=2.17.0",
    "pycodestyle>=2.10.0",
    "pydocstyle>=6.2.0"
]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.package-data]
"*" = ["*.png", "*.json", "*.avi", "*.csv", "*.eps"]

# --------------------------
# Ruff configuration
# --------------------------
[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py (common for re-exports)
"*/__init__.py" = ["F401"]

# --------------------------
# Black configuration
# --------------------------
[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# --------------------------
# PyLint configuration
# --------------------------
[tool.pylint."MAIN"]
fail-under = 8.0
fail-on = [
    "F",
    "E",
    "unused-import"
]
max-line-length = 120
disable = [
    "missing-docstring"
]

# --------------------------
# PyCodeStyle configuration
# --------------------------
[pycodestyle]
max-line-length = 120

# --------------------------
# Pydocstyle configuration
# --------------------------
[tool.pydocstyle]
max-line-length = 120
