<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_ros2_bridge</name>
  <version>0.0.1</version>
  <description>Bridge between ROS2 Wind messages and Gazebo wind messages</description>
  <maintainer email="jgrosset10@gmail.com">juliette</maintainer>

  <author email="jgrosset10@gmail.com">juliette</author>

  <license>EPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>lotusim_msgs</depend>
  <depend>gz-msgs10</depend>
  <depend>gz-transport10</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
